# codex-tools

./: .gitignore  README.md  changelog.md  package-lock.json  package.json  qa-stubbed-page.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/proxyd/: Cargo.toml
src-tauri/src/: account_service.rs  auth.rs  cli.rs  cloudflared_service.rs  i18n.rs  lib.rs  models.rs  profile_files.rs  proxy_daemon.rs  proxy_service.rs  remote_service.rs  settings_service.rs  state.rs  store.rs  tray.rs
src/components/: AccountCard.tsx  AccountsGrid.tsx  AddAccountDialog.tsx  AddAccountSection.tsx  ApiProxyPanel.tsx  AppTopBar.tsx  BottomDock.tsx  MetaStrip.tsx  NoticeBanner.tsx  SettingsPanel.tsx  SwitchField.tsx  UpdateBanner.tsx
src/hooks/: useCodexController.ts
src/i18n/: backendErrors.ts  catalog.ts
src/i18n/locales/: en-US.json  ja-JP.json  ko-KR.json  ru-RU.json  zh-CN.json
src/styles/: accounts.css  base.css  controls.css  feedback.css  proxy.css
src/styles/themes/: dark.css  light.css
src/types/: app.ts
