[package]
name = "app"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-log = "2"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tokio = { version = "1", features = ["sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
base64 = "0.22"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
