[package]
name = "app"
version = "1.9.5"
description = "Codex Tools"
authors = ["you"]
license = "MIT"
repository = "https://github.com/170-carry/codex-tools"
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

[features]
default = ["desktop"]
desktop = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-log = "2"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.4.1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
base64 = "0.22"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
axum = { version = "0.7", features = ["multipart", "ws"] }
async-stream = "0.3"
rfd = "0.15"
if-addrs = "0.13"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
toml_edit = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"] }
