[package]
name = "codex-tools-proxyd"
version = "1.1.2"
edition = "2021"
rust-version = "1.77.2"

[features]
default = []
desktop = []

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "stream", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
base64 = "0.22"
axum = "0.7"
async-stream = "0.3"
