[package]
name = "codex-tools-proxyd"
version = "1.9.5"
edition = "2021"
rust-version = "1.77.2"

[features]
default = []
desktop = []

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "stream", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
base64 = "0.22"
axum = { version = "0.7", features = ["multipart", "ws"] }
async-stream = "0.3"
futures-util = "0.3"
if-addrs = "0.13"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
toml_edit = "0.22"
